DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Extended_Cost_O__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost_O__c</fullName>
    <label>Extended Cost O</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>