DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Extended_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Extended_Gross_Profit__c</fullName>
    <formula>(UnitPrice* Quantity)  - Extended_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Gross Profit</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>