DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Factory_Mod_Cost__c.field-meta.xml
<CustomField>
    <fullName>Factory_Mod_Cost__c</fullName>
    <label>Factory/Mod Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>