DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Line_Number_F__c.field-meta.xml
<CustomField>
    <fullName>Line_Number_F__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>