DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <formula>Product2.APTS_Material_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>