DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Material_Number_O__c.field-meta.xml
<CustomField>
    <fullName>Material_Number_O__c</fullName>
    <label>Material Number O</label>
    <length>255</length>
    <type>Text</type>
</CustomField>