DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>