DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Notes_Est_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Notes_Est_Delivery__c</fullName>
    <label>Notes / Est. Delivery</label>
    <type>TextArea</type>
</CustomField>