DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Prod_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prod_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>