DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/SBQQ_Discount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Discount__c</fullName>
    <label>Discount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>