DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Spec_Desc__c.field-meta.xml
<CustomField>
    <fullName>Spec_Desc__c</fullName>
    <label>Spec Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>