DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Spec_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Spec_Package_Code__c</fullName>
    <label>Spec Package Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>