DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Tag_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Tag_Code_3__c</fullName>
    <label>Tag/Code 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>