DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Total_Weight_lb__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lb__c</fullName>
    <label>Total Weight (lb)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>