DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>Vendor_No__c</fullName>
    <label>Vendor No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>