DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>WH Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>