DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Warehouse_location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_location__c</fullName>
    <label>WH Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>