DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Number__c</fullName>
    <label>WH No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>