DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Weight_lb__c.field-meta.xml
<CustomField>
    <fullName>Weight_lb__c</fullName>
    <formula>Product2.APTS_Weight_gm__c * 2.20462</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight (lb)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>