DFfullcopybackup/force-app/main/default/objects/OrderItem/fields/Weight_lb_O__c.field-meta.xml
<CustomField>
    <fullName>Weight_lb_O__c</fullName>
    <label>Weight (lb O)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>