DFfullcopybackup/force-app/main/default/objects/OrderItem/validationRules/test_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>test_rule</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISNULL(Prod_Cost__c) , ISBLANK(Prod_Cost__c  ) )</errorConditionFormula>
    <errorMessage>test msg success</errorMessage>
</ValidationRule>